<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context=".apresentacao.cartao.CadastroCartaoActivity"
        android:padding="16dp">

    <TextView
            android:id="@+id/text_cadastrar_cartao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/cadastrar_cartao"
            android:textColor="@color/corFonteBranca"
            android:textStyle="bold"
            android:textSize="30sp"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_numero_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomizaEditText">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_cartao"
                android:background="@drawable/linha_edit_text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_nome_titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomizaEditText">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_titular"
                android:background="@drawable/linha_edit_text"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vencimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomizaEditText"
                android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vencimento"
                    android:background="@drawable/linha_edit_text"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_cvv"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomizaEditText"
                android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linha_edit_text"
                    android:hint="@string/cvv"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
            android:id="@+id/button_salvar_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_botao"
            android:textColor="@color/corFonteBranca"
            android:textSize="18sp"
            android:layout_marginTop="200dp"
            android:text="@string/salvar"/>
            <!--android:visibility="gone"-->


</LinearLayout>